# elicito-software-paper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
elicito_software_paper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: toy-example-1.ipynb  toy-example-2.ipynb
toy-examples/: toy-example-1.ipynb  toy-example-1.py  toy-example-2.py  toy-example2.ipynb
